--- a/index.html
+++ b/index.html
@@ -8,28 +8,33 @@
 body {
   margin: 0;
   height: 100vh;
-  background: radial-gradient(circle at top, #2b0033, #0a0014);
+  background:
+    linear-gradient(rgba(20,0,40,.7),rgba(20,0,40,.7)),
+    url("https://raw.githubusercontent.com/jash9923/for-baggu/main/background%20imge.jpeg")
+    center/cover no-repeat;
   display: flex;
   justify-content: center;
   align-items: center;
   font-family: 'Segoe UI', sans-serif;
   overflow: hidden;
   color: #fff;
+  word-break: break-word;
 }
 
-/* CARD */
 .card {
-  background: rgba(255,255,255,0.08);
-  padding: 30px 22px;
+  background: rgba(0,0,0,0.55);
+  padding: 28px 22px;
   border-radius: 25px;
   max-width: 360px;
-  box-shadow: 0 0 40px rgba(255,0,150,0.3);
   text-align: center;
-  z-index: 2;
-  backdrop-filter: blur(8px);
+  box-shadow: 0 0 40px rgba(255,0,150,0.4);
+  backdrop-filter: blur(6px);
 }
 
-h1 { font-size: 22px; line-height: 1.4; }
+h1 {
+  font-size: 20px;
+  line-height: 1.5;
+}
 
 button {
   margin-top: 18px;
@@ -40,113 +45,61 @@ button {
   cursor: pointer;
   background: linear-gradient(135deg,#ff4f81,#ff85c2);
   color: #fff;
-  transition: 0.3s;
 }
 
-button:hover { transform: scale(1.08); }
-.hidden { display: none; }
+.hidden { display:none; }
 
-/* GALLERY */
-.gallery { margin-top: 12px; }
-
+/* Gallery */
+.gallery { margin-top: 10px; }
 .photo-card {
-  width: 90px;
-  height: 110px;
+  width: 90px; height: 110px;
   perspective: 900px;
-  margin: 6px;
   display: inline-block;
+  margin: 5px;
 }
-
 .photo-inner {
-  width: 100%;
-  height: 100%;
-  position: relative;
+  width:100%; height:100%;
+  transition: transform .7s;
   transform-style: preserve-3d;
-  transition: transform 0.7s ease;
-  cursor: pointer;
 }
-
 .photo-card.flip .photo-inner { transform: rotateY(180deg); }
 
-.photo-front, .photo-back {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  backface-visibility: hidden;
-  border-radius: 12px;
-  overflow: hidden;
-  box-shadow: 0 4px 10px rgba(0,0,0,0.4);
+.photo-front,.photo-back {
+  position:absolute;
+  width:100%; height:100%;
+  backface-visibility:hidden;
+  border-radius:12px;
+  overflow:hidden;
 }
-
-.photo-front img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
+.photo-front img { width:100%; height:100%; object-fit:cover; }
 .photo-back {
-  background: radial-gradient(circle,#ff9acb,#ff4f81);
-  color: #fff;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 11px;
-  padding: 8px;
+  background: linear-gradient(135deg,#ff5aa5,#ff9fd0);
+  display:flex;align-items:center;justify-content:center;
+  font-size:12px;padding:6px;
   transform: rotateY(180deg);
-  text-shadow: 0 0 6px rgba(255,255,255,0.9);
 }
 
 /* Sparkles */
 .sparkle {
-  position: absolute;
-  width: 6px;
-  height: 6px;
-  background: white;
-  border-radius: 50%;
-  animation: sparkle 1s ease-out forwards;
+  position:absolute;
+  width:6px;height:6px;
+  background:white;border-radius:50%;
+  animation:sparkle 1s ease-out forwards;
 }
-
 @keyframes sparkle {
-  from { transform: scale(0); opacity: 1; }
-  to { transform: scale(2) translateY(-20px); opacity: 0; }
+  from {transform:scale(0);opacity:1;}
+  to {transform:scale(2) translateY(-20px);opacity:0;}
 }
 
 /* Floating hearts */
 .heart {
-  position: absolute;
-  bottom: -20px;
-  color: rgba(255,255,255,0.8);
-  font-size: 20px;
-  animation: float 6s linear infinite;
+  position:absolute;
+  bottom:-20px;
+  font-size:18px;
+  animation:float 6s linear infinite;
 }
-
 @keyframes float {
-  0% { transform: translateY(0); opacity: 1; }
-  100% { transform: translateY(-100vh); opacity: 0; }
-}
-
-/* Rain */
-.rain {
-  position: absolute;
-  width: 2px;
-  height: 15px;
-  background: rgba(255,255,255,0.4);
-  animation: fall 0.7s linear infinite;
-}
-
-@keyframes fall {
-  from { transform: translateY(-100vh); }
-  to { transform: translateY(100vh); }
-}
-
-/* Lightning */
-.flash {
-  animation: flash 2s infinite;
-}
-
-@keyframes flash {
-  0%, 90%, 100% { background: radial-gradient(circle at top, #2b0033, #0a0014); }
-  95% { background: #fff; }
+  to {transform:translateY(-100vh);opacity:0;}
 }
 </style>
 </head>
@@ -154,178 +107,73 @@ button:hover { transform: scale(1.08); }
 <body>
 
 <div class="card">
-  <h1 id="text">Hey Bagguu 👀</h1>
+<h1 id="text">Hey Bagguu 👀</h1>
 
-  <div id="gallery" class="gallery hidden">
-    <div class="photo-card" onclick="flip(this,1)">
-      <div class="photo-inner">
-        <div class="photo-front"><img src="https://raw.githubusercontent.com/jash9923/for-baggu/main/WhatsApp%20Image%202026-02-04%20at%202.19.39%20PM%20(1).jpeg"></div>
-        <div class="photo-back"></div>
-      </div>
-    </div>
-
-    <div class="photo-card" onclick="flip(this,2)">
-      <div class="photo-inner">
-        <div class="photo-front"><img src="https://raw.githubusercontent.com/jash9923/for-baggu/main/WhatsApp%20Image%202026-02-04%20at%202.19.39%20PM%20(2).jpeg"></div>
-        <div class="photo-back"></div>
-      </div>
-    </div>
-
-    <div class="photo-card" onclick="flip(this,3)">
-      <div class="photo-inner">
-        <div class="photo-front"><img src="https://raw.githubusercontent.com/jash9923/for-baggu/main/WhatsApp%20Image%202026-02-04%20at%202.19.39%20PM.jpeg"></div>
-        <div class="photo-back"></div>
-      </div>
-    </div>
-
-    <div class="photo-card" onclick="flip(this,4)">
-      <div class="photo-inner">
-        <div class="photo-front"><img src="https://raw.githubusercontent.com/jash9923/for-baggu/main/WhatsApp%20Image%202026-02-04%20at%202.19.40%20PM%20(1).jpeg"></div>
-        <div class="photo-back"></div>
-      </div>
-    </div>
-
-    <div class="photo-card" onclick="flip(this,5)">
-      <div class="photo-inner">
-        <div class="photo-front"><img src="https://raw.githubusercontent.com/jash9923/for-baggu/main/WhatsApp%20Image%202026-02-04%20at%202.19.40%20PM%20(2).jpeg"></div>
-        <div class="photo-back"></div>
-      </div>
-    </div>
-
-    <div class="photo-card" onclick="flip(this,6)">
-      <div class="photo-inner">
-        <div class="photo-front"><img src="https://raw.githubusercontent.com/jash9923/for-baggu/main/WhatsApp%20Image%202026-02-04%20at%202.19.40%20PM.jpeg"></div>
-        <div class="photo-back"></div>
-      </div>
-    </div>
-  </div>
-
-  <button id="nextBtn" onclick="next()">Click here</button>
-
-  <div id="finalBtns" class="hidden">
-    <button onclick="valYes()">Hell Yess 😍</button>
-    <button onclick="valOnly()">Only if you take me for sushi 🍣</button>
-  </div>
-
-  <div id="hiddenMsg" class="hidden"></div>
+<div id="gallery" class="gallery hidden">
+  <!-- Replace with your photo raw links -->
 </div>
 
-<audio id="music" loop>
-  <source src="https://pagalworld.com.se/files/download/id/6470" type="audio/mpeg">
-</audio>
+<button id="nextBtn" onclick="next()">Click here</button>
 
-<audio id="heartbeat">
-  <source src="https://www.soundjay.com/human/heartbeat-01a.mp3" type="audio/mpeg">
-</audio>
+<div id="finalBtns" class="hidden">
+  <button onclick="valYes()">Hell Yess 😍</button>
+  <button onclick="valOnly()">Only if sushi 🍣</button>
+</div>
 
-<audio id="rainSound">
-  <source src="https://www.soundjay.com/nature/rain-01.mp3" type="audio/mpeg">
-</audio>
+<div id="hiddenMsg" class="hidden"></div>
+</div>
+
+<audio id="music" src="https://raw.githubusercontent.com/jash9923/for-baggu/main/Dil_Maange_More_-_Gustakh_Dil_Tere_Liye_(mp3.pm).mp3" loop></audio>
+<audio id="chime" src="https://www.soundjay.com/misc/sounds/bell-ringing-05.mp3"></audio>
 
 <script>
-const messages = [
-  "I made something just for you 💕",
-  "Because you mean more to me than you know",
-  "You are my safe place, my comfort",
-  "And my favorite person 🥺",
-  "Look at us 💞",
-  "Bagguu, will you be my Valentine? ❤️"
+const messages=[
+"I made something just for you 💕",
+"You are my safe place",
+"My favorite person 🥺",
+"Look at us 💞",
+"Bagguu, will you be my Valentine? ❤️"
 ];
+let i=0,started=false;
 
-let i = 0, musicPlayed = false;
-
-function next() {
-  if (!musicPlayed) {
-    document.getElementById("music").play();
-    musicPlayed = true;
-  }
-
-  if (i === 4) document.getElementById("gallery").classList.remove("hidden");
-
-  if (i < messages.length - 1) {
-    document.getElementById("text").innerText = messages[i];
-    i++;
-  } else {
-    document.getElementById("text").innerText = messages[i];
-    document.getElementById("nextBtn").classList.add("hidden");
-    document.getElementById("finalBtns").classList.remove("hidden");
-  }
+function next(){
+ if(!started){
+  document.getElementById("music").volume=0.4;
+  document.getElementById("music").play();
+  started=true;
+ }
+ if(i<messages.length){
+  document.getElementById("text").innerText=messages[i++];
+ } else {
+  nextBtn.classList.add("hidden");
+  finalBtns.classList.remove("hidden");
+ }
 }
 
-function valYes() {
-  document.getElementById("heartbeat").play();
-  typeFinal("So it’s a date 😍❤️\n\nMy heart is beating just for you 💓");
+function valYes(){
+ typeFinal("So it’s a date 😍❤️\nMy heart beats for you 💓");
 }
 
-function valOnly() {
-  document.getElementById("rainSound").play();
-  document.body.classList.add("flash");
-
-  for (let i = 0; i < 80; i++) {
-    const drop = document.createElement("div");
-    drop.className = "rain";
-    drop.style.left = Math.random() * 100 + "vw";
-    drop.style.animationDuration = (0.5 + Math.random()) + "s";
-    document.body.appendChild(drop);
-  }
-
-  typeFinal("I know you clicked Only if sushi 😏🍣\n\nSo we are going to have THE BESTTT for us 💕🔥");
+function valOnly(){
+ typeFinal("I know you clicked sushi 😏🍣\nSo we’re having THE BEST for us 💕🔥");
 }
 
-function typeFinal(text) {
-  document.getElementById("finalBtns").classList.add("hidden");
-  document.getElementById("text").classList.add("hidden");
-  document.getElementById("gallery").classList.add("hidden");
-
-  const box = document.getElementById("hiddenMsg");
-  box.classList.remove("hidden");
-  box.innerHTML = "<h1 id='typeBox'></h1><br><button onclick='reply()'>Reply to me 💬</button>";
-
-  let idx = 0;
-  const interval = setInterval(() => {
-    document.getElementById("typeBox").innerText += text[idx];
-    idx++;
-    if (idx >= text.length) clearInterval(interval);
-  }, 50);
+function typeFinal(t){
+ text.classList.add("hidden");
+ finalBtns.classList.add("hidden");
+ const box=document.getElementById("hiddenMsg");
+ box.classList.remove("hidden");
+ box.innerHTML="<h1>"+t.replace(/\n/g,"<br>")+"</h1>";
 }
 
-function reply() {
-  window.open("https://wa.me/919727257013", "_blank");
-}
-
-function flip(card, n) {
-  const msgs = {
-    1: "This smile still makes my heart skip 💖",
-    2: "Our cutest memory ever 🥺",
-    3: "My favorite face 😌",
-    4: "This hug = home 🤍",
-    5: "Every moment with you is magic ✨",
-    6: "Forever us 💕"
-  };
-
-  card.classList.toggle("flip");
-  card.querySelector(".photo-back").innerText = msgs[n];
-
-  for (let i = 0; i < 8; i++) {
-    const s = document.createElement("div");
-    s.className = "sparkle";
-    s.style.left = Math.random() * 80 + "%";
-    s.style.top = Math.random() * 80 + "%";
-    card.appendChild(s);
-    setTimeout(() => s.remove(), 1000);
-  }
-}
-
-/* Floating hearts */
-setInterval(() => {
-  const heart = document.createElement("div");
-  heart.className = "heart";
-  heart.innerHTML = "❤️";
-  heart.style.left = Math.random() * 100 + "vw";
-  heart.style.fontSize = (15 + Math.random() * 20) + "px";
-  document.body.appendChild(heart);
-  setTimeout(() => heart.remove(), 6000);
-}, 300);
+setInterval(()=>{
+ const h=document.createElement("div");
+ h.className="heart";
+ h.innerText="❤️";
+ h.style.left=Math.random()*100+"vw";
+ document.body.appendChild(h);
+ setTimeout(()=>h.remove(),6000);
+},400);
 </script>
 
 </body>
