--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
 body {
   margin: 0;
   height: 100vh;
-  background
-  linear-gradient(rgba(20,0,40,.7),rgba(20,0,40,.7)),
-    url("https://raw.githubusercontent.com/jash9923/for-baggu/main/background%20imge.jpeg")
-    center/cover no-repeat;
+  background: radial-gradient(circle at top, #2b0033, #0a0014);
+  url("https://raw.githubusercontent.com/jash9923/for-baggu/main/background%20imge.jpeg")
   display: flex;
   justify-content: center;
   align-items: center;
