--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@ function valOnly() {
     document.body.appendChild(drop);
   }
 
-  typeFinal("I know you clicked Only if sushi 😏🍣\n\nSo we are going to have THE BESTTT for us 💕🔥");
+  typeFinal("I know saali te khavanu choose kairu che toh jaissu ave aapde pakkuu donee cheeeeeeeeee");
 }
 
 function typeFinal(text) {
