--- a/index.html
+++ b/index.html
@@ -245,7 +245,8 @@ function next() {
   if (i < messages.length - 1) {
     document.getElementById("text").innerText = messages[i];
     i++;
-  } else {
+  } 
+  else {
     document.getElementById("text").innerText = messages[i];
     document.getElementById("nextBtn").classList.add("hidden");
     document.getElementById("finalBtns").classList.remove("hidden");
