--- a/index.html
+++ b/index.html
@@ -269,9 +269,11 @@ function valOnly() {
     drop.style.animationDuration = (0.5 + Math.random()) + "s";
     document.body.appendChild(drop);
   }
-
-  typeFinal("I know saali te khavanu choose kairu che toh jaissu ave aapde pakkuu donee cheeeeeeeeee");
+function valOnly() {
+  showFinal("I know you clicked ‘Only if you take me for sushi’ 😏🍣<br><br>SO we are going to have the best for US… THE BESTTT 💕🔥");
 }
+
+
 
 function typeFinal(text) {
   document.getElementById("finalBtns").classList.add("hidden");
