--- a/index.html
+++ b/index.html
@@ -1,335 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>For My Bagguu ❤️</title>
-
-<style>
-body {
-  margin: 0;
-  height: 100vh;
-  background: radial-gradient(circle at top, #2b0033, #0a0014);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-family: 'Segoe UI', sans-serif;
-  overflow: hidden;
-  color: #fff;
-}
-
-/* CARD */
-.card {
-  background: rgba(255,255,255,0.08);
-  padding: 30px 22px;
-  border-radius: 25px;
-  max-width: 360px;
-  box-shadow: 0 0 40px rgba(255,0,150,0.3);
-  text-align: center;
-  z-index: 2;
-  backdrop-filter: blur(8px);
-}
-
-h1 { font-size: 22px; line-height: 1.4; }
-
-button {
-  margin-top: 18px;
-  padding: 12px 24px;
-  border-radius: 25px;
-  border: none;
-  font-size: 15px;
-  cursor: pointer;
-  background: linear-gradient(135deg,#ff4f81,#ff85c2);
-  color: #fff;
-  transition: 0.3s;
-}
-
-button:hover { transform: scale(1.08); }
-.hidden { display: none; }
-
-/* GALLERY */
-.gallery { margin-top: 12px; }
-
-.photo-card {
-  width: 90px;
-  height: 110px;
-  perspective: 900px;
-  margin: 6px;
-  display: inline-block;
-}
-
-.photo-inner {
-  width: 100%;
-  height: 100%;
-  position: relative;
-  transform-style: preserve-3d;
-  transition: transform 0.7s ease;
-  cursor: pointer;
-}
-
-.photo-card.flip .photo-inner { transform: rotateY(180deg); }
-
-.photo-front, .photo-back {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  backface-visibility: hidden;
-  border-radius: 12px;
-  overflow: hidden;
-  box-shadow: 0 4px 10px rgba(0,0,0,0.4);
-}
-
-.photo-front img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.photo-back {
-  background: radial-gradient(circle,#ff9acb,#ff4f81);
-  color: #fff;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 11px;
-  padding: 8px;
-  transform: rotateY(180deg);
-  text-shadow: 0 0 6px rgba(255,255,255,0.9);
-}
-
-/* Sparkles */
-.sparkle {
-  position: absolute;
-  width: 6px;
-  height: 6px;
-  background: white;
-  border-radius: 50%;
-  animation: sparkle 1s ease-out forwards;
-}
-
-@keyframes sparkle {
-  from { transform: scale(0); opacity: 1; }
-  to { transform: scale(2) translateY(-20px); opacity: 0; }
-}
-
-/* Floating hearts */
-.heart {
-  position: absolute;
-  bottom: -20px;
-  color: rgba(255,255,255,0.8);
-  font-size: 20px;
-  animation: float 6s linear infinite;
-}
-
-@keyframes float {
-  0% { transform: translateY(0); opacity: 1; }
-  100% { transform: translateY(-100vh); opacity: 0; }
-}
-
-/* Rain */
-.rain {
-  position: absolute;
-  width: 2px;
-  height: 15px;
-  background: rgba(255,255,255,0.4);
-  animation: fall 0.7s linear infinite;
-}
-
-@keyframes fall {
-  from { transform: translateY(-100vh); }
-  to { transform: translateY(100vh); }
-}
-
-/* Lightning */
-.flash {
-  animation: flash 2s infinite;
-}
-
-@keyframes flash {
-  0%, 90%, 100% { background: radial-gradient(circle at top, #2b0033, #0a0014); }
-  95% { background: #fff; }
-}
-</style>
+  <meta charset="UTF-8" />
+  <title>For You ❤️</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background: linear-gradient(135deg, #ff9a9e, #fad0c4);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      color: #fff;
+      text-align: center;
+    }
+    .card {
+      background: rgba(0,0,0,0.25);
+      padding: 25px;
+      border-radius: 18px;
+      max-width: 360px;
+      width: 90%;
+      box-shadow: 0 20px 40px rgba(0,0,0,0.3);
+    }
+    img {
+      width: 100%;
+      border-radius: 14px;
+      margin-bottom: 15px;
+    }
+    h2 {
+      margin-bottom: 10px;
+    }
+    button {
+      background: #ff4b5c;
+      border: none;
+      padding: 12px 22px;
+      margin: 10px;
+      border-radius: 30px;
+      font-size: 16px;
+      color: white;
+      cursor: pointer;
+    }
+    button:hover {
+      background: #ff2e44;
+    }
+    .hidden {
+      display: none;
+    }
+    iframe {
+      border-radius: 12px;
+      margin-top: 15px;
+    }
+  </style>
 </head>
 
 <body>
 
-<div class="card">
-  <h1 id="text">Hey Bagguu 👀</h1>
-
-  <div id="gallery" class="gallery hidden">
-    <div class="photo-card" onclick="flip(this,1)">
-      <div class="photo-inner">
-        <div class="photo-front"><img src="https://raw.githubusercontent.com/jash9923/for-baggu/main/WhatsApp%20Image%202026-02-04%20at%202.19.39%20PM%20(1).jpeg"></div>
-        <div class="photo-back"></div>
-      </div>
-    </div>
-
-    <div class="photo-card" onclick="flip(this,2)">
-      <div class="photo-inner">
-        <div class="photo-front"><img src="https://raw.githubusercontent.com/jash9923/for-baggu/main/WhatsApp%20Image%202026-02-04%20at%202.19.39%20PM%20(2).jpeg"></div>
-        <div class="photo-back"></div>
-      </div>
-    </div>
-
-    <div class="photo-card" onclick="flip(this,3)">
-      <div class="photo-inner">
-        <div class="photo-front"><img src="https://raw.githubusercontent.com/jash9923/for-baggu/main/WhatsApp%20Image%202026-02-04%20at%202.19.39%20PM.jpeg"></div>
-        <div class="photo-back"></div>
-      </div>
-    </div>
-
-    <div class="photo-card" onclick="flip(this,4)">
-      <div class="photo-inner">
-        <div class="photo-front"><img src="https://raw.githubusercontent.com/jash9923/for-baggu/main/WhatsApp%20Image%202026-02-04%20at%202.19.40%20PM%20(1).jpeg"></div>
-        <div class="photo-back"></div>
-      </div>
-    </div>
-
-    <div class="photo-card" onclick="flip(this,5)">
-      <div class="photo-inner">
-        <div class="photo-front"><img src="https://raw.githubusercontent.com/jash9923/for-baggu/main/WhatsApp%20Image%202026-02-04%20at%202.19.40%20PM%20(2).jpeg"></div>
-        <div class="photo-back"></div>
-      </div>
-    </div>
-
-    <div class="photo-card" onclick="flip(this,6)">
-      <div class="photo-inner">
-        <div class="photo-front"><img src="https://raw.githubusercontent.com/jash9923/for-baggu/main/WhatsApp%20Image%202026-02-04%20at%202.19.40%20PM.jpeg"></div>
-        <div class="photo-back"></div>
-      </div>
-    </div>
+  <!-- STEP 1 -->
+  <div class="card" id="step1">
+    <img src="https://raw.githubusercontent.com/jash9923/for-bagguu/main/WhatsApp%20Image%202026-02-04%20at%202.19.39%20PM.jpeg">
+    <h2>Hey… I have something to ask you 🥺</h2>
+    <button onclick="nextStep('step1','step2')">Yes 💗</button>
   </div>
 
-  <button id="nextBtn" onclick="next()">Click here</button>
-
-  <div id="finalBtns" class="hidden">
-    <button onclick="valYes()">Hell Yess 😍</button>
-    <button onclick="valOnly()">Only if you take me for sushi 🍣</button>
+  <!-- STEP 2 -->
+  <div class="card hidden" id="step2">
+    <img src="https://raw.githubusercontent.com/jash9923/for-bagguu/main/WhatsApp%20Image%202026-02-04%20at%202.19.40%20PM.jpeg">
+    <h2>Will you trust me with this moment?</h2>
+    <button onclick="nextStep('step2','step3')">Yes 😳</button>
   </div>
 
-  <div id="hiddenMsg" class="hidden"></div>
-</div>
+  <!-- STEP 3 -->
+  <div class="card hidden" id="step3">
+    <img src="https://raw.githubusercontent.com/jash9923/for-bagguu/main/WhatsApp%20Image%202026-02-04%20at%202.19.39%20PM%20(1).jpeg">
+    <h2>Will you be my Valentine? 💘</h2>
+    <p><b>Our date is…</b><br>for the best sushi 🍣 and the best of me 💖</p>
 
-<audio id="music" loop>
-  <source src="https://pagalworld.com.se/files/download/id/6470" type="audio/mpeg">
-</audio>
+    <!-- Hidden Message -->
+    <p style="margin-top:15px;font-size:14px;">
+      (P.S. I didn’t just make a page… I made this with my whole heart)
+    </p>
 
-<audio id="heartbeat">
-  <source src="https://www.soundjay.com/human/heartbeat-01a.mp3" type="audio/mpeg">
-</audio>
+    <!-- Song -->
+    <iframe width="100%" height="80"
+      src="https://www.youtube.com/embed/7pZ8k8L3pI4?autoplay=1"
+      allow="autoplay">
+    </iframe>
+  </div>
 
-<audio id="rainSound">
-  <source src="https://www.soundjay.com/nature/rain-01.mp3" type="audio/mpeg">
-</audio>
-
-<script>
-const messages = [
-  "I made something just for you 💕",
-  "Because you mean more to me than you know",
-  "You are my safe place, my comfort",
-  "And my favorite person 🥺",
-  "Look at us 💞",
-  "Bagguu, will you be my Valentine? ❤️"
-];
-
-let i = 0, musicPlayed = false;
-
-function next() {
-  if (!musicPlayed) {
-    document.getElementById("music").play();
-    musicPlayed = true;
-  }
-
-  if (i === 4) document.getElementById("gallery").classList.remove("hidden");
-
-  if (i < messages.length - 1) {
-    document.getElementById("text").innerText = messages[i];
-    i++;
-  } 
-  else {
-    document.getElementById("text").innerText = messages[i];
-    document.getElementById("nextBtn").classList.add("hidden");
-    document.getElementById("finalBtns").classList.remove("hidden");
-  }
-}
-
-function valYes() {
-  document.getElementById("heartbeat").play();
-  typeFinal("So it’s a date 😍❤️\n\nMy heart is beating just for you 💓");
-}
-
-function valOnly() {
-  document.getElementById("rainSound").play();
-  document.body.classList.add("flash");
-
-  for (let i = 0; i < 80; i++) {
-    const drop = document.createElement("div");
-    drop.className = "rain";
-    drop.style.left = Math.random() * 100 + "vw";
-    drop.style.animationDuration = (0.5 + Math.random()) + "s";
-    document.body.appendChild(drop);
-  }
-function valOnly() {
-  showFinal("I know you clicked ‘Only if you take me for sushi’ 😏🍣<br><br>SO we are going to have the best for US… THE BESTTT 💕🔥");
-}
-
-
-
-function typeFinal(text) {
-  document.getElementById("finalBtns").classList.add("hidden");
-  document.getElementById("text").classList.add("hidden");
-  document.getElementById("gallery").classList.add("hidden");
-
-  const box = document.getElementById("hiddenMsg");
-  box.classList.remove("hidden");
-  box.innerHTML = "<h1 id='typeBox'></h1><br><button onclick='reply()'>Reply to me 💬</button>";
-
-  let idx = 0;
-  const interval = setInterval(() => {
-    document.getElementById("typeBox").innerText += text[idx];
-    idx++;
-    if (idx >= text.length) clearInterval(interval);
-  }, 50);
-}
-
-function reply() {
-  window.open("https://wa.me/919727257013", "_blank");
-}
-
-function flip(card, n) {
-  const msgs = {
-    1: "This smile still makes my heart skip 💖",
-    2: "Our cutest memory ever 🥺",
-    3: "My favorite face 😌",
-    4: "This hug = home 🤍",
-    5: "Every moment with you is magic ✨",
-    6: "Forever us 💕"
-  };
-
-  card.classList.toggle("flip");
-  card.querySelector(".photo-back").innerText = msgs[n];
-
-  for (let i = 0; i < 8; i++) {
-    const s = document.createElement("div");
-    s.className = "sparkle";
-    s.style.left = Math.random() * 80 + "%";
-    s.style.top = Math.random() * 80 + "%";
-    card.appendChild(s);
-    setTimeout(() => s.remove(), 1000);
-  }
-}
-
-/* Floating hearts */
-setInterval(() => {
-  const heart = document.createElement("div");
-  heart.className = "heart";
-  heart.innerHTML = "❤️";
-  heart.style.left = Math.random() * 100 + "vw";
-  heart.style.fontSize = (15 + Math.random() * 20) + "px";
-  document.body.appendChild(heart);
-  setTimeout(() => heart.remove(), 6000);
-}, 300);
-</script>
+  <script>
+    function nextStep(current, next) {
+      document.getElementById(current).classList.add("hidden");
+      document.getElementById(next).classList.remove("hidden");
+    }
+  </script>
 
 </body>
 </html>
